name:                ffs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ffs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Args
                     , Ffs
                     , Jira
                     , Time
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , cmdargs
                     , hslogger
                     , lens
                     , text
                     , tuple
                     , time
                     , wreq
  default-language:    Haskell2010

executable ffs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cmdargs
                     , ffs
                     , hslogger
  default-language:    Haskell2010

test-suite ffs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       JiraSpec
                     , TimeSpec
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , aeson
                     , bytestring
                     , ffs
                     , hspec
                     , lens
                     , string-qq
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ffs
