name:                ffs
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tcsc/ffs#readme
license:             BSD3
license-file:        LICENSE
author:              Trent Clarke
maintainer:          trent.clarke@gmail.com
copyright:           2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ffs
                     , Ffs.CommandLine
                     , Ffs.ConfigFile
                     , Ffs.Jira
                     , Ffs.Options
                     , Ffs.Time
                     , Paths_ffs
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , boxes
                     , bytestring
                     , containers
                     , ConfigFile
                     , connection
                     , directory
                     , filepath
                     , hslogger
                     , http-client
                     , http-client-tls
                     , lens
                     , network-uri
                     , optparse-applicative
                     , parallel-io
                     , text
                     , transformers
                     , tuple
                     , time
                     , unordered-containers
                     , urlencoded
                     , wreq
  default-language:    Haskell2010

executable ffs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cmdargs
                     , ffs
                     , hslogger
  default-language:    Haskell2010

test-suite ffs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       FfsSpec
                     , Ffs.CommandLineSpec
                     , Ffs.ConfigFileSpec
                     , Ffs.JiraSpec
                     , Ffs.OptionsSpec
                     , Ffs.TimeSpec
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , ffs
                     , hspec
                     , lens
                     , network-uri
                     , QuickCheck
                     , string-qq
                     , text
                     , time
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tcsc/ffs
